--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -119,3 +119,4 @@ room = { id = "androidx.room", version.ref = "room" }
 android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "agp" }
 mapsplatform-secrets-plugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsPlugin"}
 
+runique-android-application = {id="runique.android.application",version="unspecified"}
