Added Compose Convention Plugin

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -120,3 +120,4 @@ android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "a
 mapsplatform-secrets-plugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsPlugin"}
 
 runique-android-application = {id="runique.android.application",version="unspecified"}
+runique-android-application-compose = {id="runique.android.application.compose",version="unspecified"}
